fix comment of mentor

--- a/rwd_practice_two/src/index.html
+++ b/rwd_practice_two/src/index.html
@@ -14,7 +14,7 @@
           <img src="/asset/img/logo.png" alt="Figma Land" />
         </a>
       </div>
-      <div class="header__nav-form hiden-mobile">
+      <div class="header__nav-form hidden-mobile">
         <nav class="nav-items">
           <a class="text-link" href="javascript:void(0)">Home</a>
           <a class="text-link" href="javascript:void(0)">Product</a>
@@ -22,13 +22,13 @@
           <a class="text-link" href="javascript:void(0)">About</a>
           <a class="text-link" href="javascript:void(0)">Contact</a>
         </nav>
-        <form class="header__form hiden-mobile">
+        <form class="header__form hidden-mobile">
           <input class="input" type="email" placeholder="Your Email" />
           <button class="btn pulse-btn" type="submit"><span class="text-btn">Subscribe</span></button>
         </form>
       </div>
       <!-- Hamburger -->
-      <div class="hamburger-menu hiden-desktop">
+      <div class="hamburger-menu hidden-desktop">
         <input class="menu__toggle" id="menu" type="checkbox" hidden />
         <label class="menu__btn" for="menu">
           <span></span>
@@ -57,8 +57,8 @@
       <!-- Hero -->
       <section class="display--flex hero-layout section--dark">
         <div class="hero-title display--flex gap--7">
-          <h1 class="text-h1 hiden-mobile">We focus on ergonomics</h1>
-          <h2 class="text-h2 hiden-desktop">Lightning fast prototyping</h2>
+          <h1 class="text-h1 hidden-mobile">We focus on ergonomics</h1>
+          <h2 class="text-h2 hidden-desktop">Lightning fast prototyping</h2>
           <h4 class="text-h4">Most calendars are designed for teams. Slate is designed for freelancers</h4>
         </div>
         <picture>
@@ -126,8 +126,8 @@
       <section class="display--flex newsletter-layout section--dark">
         <div class="display--flex gap--7">
           <h3 class="text-h3">At your fingertips</h3>
-          <h2 class="text-h2 hiden-desktop">Newsletter</h2>
-          <h2 class="text-h2 hiden mobile">Lightning fast prototyping</h2>
+          <h2 class="text-h2 hidden-desktop">Newsletter</h2>
+          <h2 class="text-h2 hidden-mobile">Lightning fast prototyping</h2>
         </div>
         <form class="display--flex form-subscribe">
           <h3 class="text-h3">Subscribe to our Newsletter</h3>
@@ -162,17 +162,17 @@
             <img src="/asset/img/basecamp.svg" alt="Basecamp Icon" />
             <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
           </li>
-          <li class="display--flex partner__card-content hiden-mobile">
+          <li class="display--flex partner__card-content hidden-mobile">
             <h5 class="text-h5">Client Name</h5>
             <img src="/asset/img/basecamp.svg" alt="Basecamp Icon" />
             <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
           </li>
-          <li class="display--flex partner__card-content hiden-mobile">
+          <li class="display--flex partner__card-content hidden-mobile">
             <h5 class="text-h5">Client Name</h5>
             <img src="/asset/img/airbnb.svg" alt="Basecamp Icon" />
             <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
           </li>
-          <li class="display--flex partner__card-content hiden-mobile">
+          <li class="display--flex partner__card-content hidden-mobile">
             <h5 class="text-h5">Client Name</h5>
             <img src="/asset/img/app-store.svg" alt="Basecamp Icon" />
             <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
@@ -216,8 +216,8 @@
               <h5 class="text-h5">Organize across all apps by hand</h5>
             </div>
             <div class="pricing__card-items">
-              <span class="text-h1 hiden-desktop">10</span>
-              <span class="text-h1 hiden-mobile">0</span>
+              <span class="text-h1 hidden-desktop">10</span>
+              <span class="text-h1 hidden-mobile">0</span>
               <div class="display--flex">
                 <span class="text-h3">$</span>
                 <span class="text-h5">Per Month</span>
@@ -227,8 +227,8 @@
           </li>
           <li class="display--flex pricing__card-content">
             <div class="display--flex pricing__card-title">
-              <h3 class="text-h3 hiden-desktop">Free</h3>
-              <h3 class="text-h3 hiden-mobile">STANDARD</h3>
+              <h3 class="text-h3 hidden-desktop">Free</h3>
+              <h3 class="text-h3 hidden-mobile">STANDARD</h3>
               <h5 class="text-h5">Organize across all apps by hand</h5>
             </div>
             <div class="pricing__card-items">
@@ -242,13 +242,13 @@
           </li>
           <li class="display--flex pricing__card-content">
             <div class="display--flex pricing__card-title">
-              <h3 class="text-h3 hiden-desktop">Free</h3>
-              <h3 class="text-h3 hiden-mobile">BUSINESS</h3>
+              <h3 class="text-h3 hidden-desktop">Free</h3>
+              <h3 class="text-h3 hidden-mobile">BUSINESS</h3>
               <h5 class="text-h5">Organize across all apps by hand</h5>
             </div>
             <div class="pricing__card-items">
-              <span class="text-h1 hiden-desktop">10</span>
-              <span class="text-h1 hiden-mobile">99</span>
+              <span class="text-h1 hidden-desktop">10</span>
+              <span class="text-h1 hidden-mobile">99</span>
               <div class="display--flex">
                 <span class="text-h3">$</span>
                 <span class="text-h5">Per Month</span>
