fix comment of mentor

--- a/rwd_practice_two/src/index.html
+++ b/rwd_practice_two/src/index.html
@@ -80,8 +80,8 @@
           <li>
             <div class="item-block">
               <picture>
-                <source media="(min-width: 1025px)" srcset="/asset/img/feature-icon-1.jpg" />
-                <img src="/asset/img/feature-icon.jpg" alt="Feature Icon" />
+                <source media="(min-width: 1025px)" srcset="/asset/img/feature-icon-1.svg" />
+                <img src="/asset/img/feature-icon.svg" style="width: 18px; height: 18px" alt="Feature Icon" />
               </picture>
               <h3 class="text-h3">The best products start with Sketch</h3>
             </div>
@@ -90,8 +90,8 @@
           <li>
             <div class="item-block">
               <picture>
-                <source media="(min-width: 1025px)" srcset="/asset/img/feature-icon-2.jpg" />
-                <img src="/asset/img/feature-icon.jpg" alt="Feature Icon" />
+                <source media="(min-width: 1025px)" srcset="/asset/img/feature-icon-2.svg" />
+                <img src="/asset/img/feature-icon.svg" alt="Feature Icon" />
               </picture>
               <h3 class="text-h3">Fastest way to organize</h3>
             </div>
@@ -99,7 +99,9 @@
           </li>
           <li>
             <div class="item-block">
-              <img src="/asset/img/feature-icon.jpg" alt="Feature Icon" />
+              <picture>
+                <img src="/asset/img/feature-icon.svg" alt="Feature Icon" />
+              </picture>
               <h3 class="text-h3">Work better together</h3>
             </div>
             <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal.</p>
